--- a/javaee/src/main/webapp/views/view2.html
+++ b/javaee/src/main/webapp/views/view2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="UTF-8" />
-<h1>布萊德大公司</h1>
+<h1 style="background-color:yellow">布萊德大公司V2</h1>
 <hr />
 <form action="Brad13">
 	<input type="number" name="x" value="%s"/>
@@ -10,4 +10,4 @@
 	<span>%s</span>
 </form>
 <hr />
-<div>版權沒有, 歡迎拷貝</div>
+<div>版權所有, 禁止拷貝</div>
