--- a/javaee/src/main/webapp/views/view2.html
+++ b/javaee/src/main/webapp/views/view2.html
@@ -4,7 +4,12 @@
 <hr />
 <form action="Brad13">
 	<input type="number" name="x" value="%s"/>
-	+
+	<select name="op">
+		<option value="1">+</option>
+		<option value="2">-</option>
+		<option value="3">x</option>
+		<option value="4">/</option>
+	</select>
 	<input type="number" name="y" value="%s"/>
 	<input type="submit" value="=" />
 	<span>%s</span>
