--- a/javaee/src/main/webapp/views/view2.html
+++ b/javaee/src/main/webapp/views/view2.html
@@ -5,10 +5,11 @@
 <form action="Brad13">
 	<input type="number" name="x" value="%s"/>
 	<select name="op">
-		<option value="1">+</option>
-		<option value="2">-</option>
-		<option value="3">x</option>
-		<option value="4">/</option>
+		<option value="1" %s>+</option>
+		<option value="2" %s>-</option>
+		<option value="3" %s>x</option>
+		<option value="4" %s>/</option>
+		<option value="5" %s>次方</option>
 	</select>
 	<input type="number" name="y" value="%s"/>
 	<input type="submit" value="=" />
